Fixing current problem get clipped when height is shrinked

--- a/src/components/QuestionInputs/FloatTextInput/FloatTextInput.scss
+++ b/src/components/QuestionInputs/FloatTextInput/FloatTextInput.scss
@@ -2,7 +2,10 @@
 @import './variables';
 
 .textInputWrap {
-  font-size: 24px;
+  font-size: 20px;
+  @include media('>=sm') {
+    font-size: 24px;
+  }
   font-family: 'Lato';
   font-weight: 400;
   line-height: 1.5em;
