--- a/src/components/QuestionInputs/Statement/Statement.scss
+++ b/src/components/QuestionInputs/Statement/Statement.scss
@@ -6,7 +6,6 @@
   font-size: 16px;
   max-height: 290px;
   overflow: auto;
-  margin-right: 40px;
   border: 1px solid $grey;
   color: $grey;
   @include border-radius(4px);
